# pyneuro

./: .env  .env.sample  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  404.html  CHANGELOG.md  DOCSTRING_UPDATES_SUMMARY.md  DOCSTRING_UPDATE_PLAN.md  DOCUMENTATION_PROGRESS_TRACKER.md  Dockerfile  Jenkinsfile  Makefile  README.md  TODO.md  build.sh  build_docs.sh  docker-compose.dev.yml  docker-compose.mario.yml  index.html  infra  lab-resource-manager  mario-docker.sh  mario-pizzeria  mkdocs.yml  openbank  pyneuroctl  pyproject.toml  simple-ui  sitemap.xml  test_cqrs_metrics_auto_enable.py  validate_mermaid.py  validate_scoped_fix.py
.github/: copilot-instructions.md
.github/workflows/: mkdocs-material.yml  mkdocs.yml
MERMAID_SETUP/: index.html
PYNEUROCTL_SETUP/: index.html
_pizzeria_domain/: index.html
ai-agent-guide/: index.html
architecture/: index.html
cli/infra-cli/: index.html
concepts/: index.html
concepts/aggregates-entities/: index.html
concepts/clean-architecture/: index.html
concepts/cqrs/: index.html
concepts/dependency-injection/: index.html
concepts/domain-driven-design/: index.html
concepts/event-driven/: index.html
concepts/mediator/: index.html
concepts/repository/: index.html
deployment/: README-mario-docker.md
deployment/docker-compose/: DOCKER_COMPOSE_ARCHITECTURE.md  docker-compose.lab-resource-manager.yml  docker-compose.mario.yml  docker-compose.mario.yml.backup  docker-compose.openbank.yml  docker-compose.shared.yml  docker-compose.simple-ui.yml
deployment/keycloak/: README.md  configure-master-realm.sh  create-test-users.sh  mario-pizzeria-realm-export.json  pyneuro-realm-export.json  realm-export.json
deployment/loki/: loki-config.yaml
deployment/mongo/: MONGODB_EXPRESS_ACCESS.md  init-mario-db.js  recreate-customers.js
deployment/otel/: otel-collector-config.yaml
deployment/prometheus/: prometheus.yml
deployment/tempo/: tempo.yaml
docs/: .phase6-qa-report.md  PYNEUROCTL_SETUP.md  _pizzeria_domain.md  ai-agent-guide.md  architecture.md  documentation-philosophy.md  getting-started.md  getting_started.md  index.md  index_corrupted.md  mario-pizzeria.md  patterns.md  test-mermaid.md
docs/guides/: index.md  (+13 more)
documentation-philosophy/: index.html
features/: index.html
getting-started/: index.html
getting_started/: index.html
guides/: index.html
index_corrupted/: index.html
mario-pizzeria/: index.html
notes/: CONTROLLER_ROUTING_FIX.md  DDD.md  DDD_recommendations.md  DOCSTRING_UPDATES.md  DOCUMENTATION_REFACTORING_PLAN.md  ENUM_SERIALIZATION_ANALYSIS.md  ESDBCLIENT_ASYNC_SUBSCRIPTION_BUG.md  ESDBCLIENT_GITHUB_ISSUE.md  FRAMEWORK_SERVICE_LIFETIME_ENHANCEMENT.md  IMPLEMENTATION_SUMMARY.md  KURRENTDB_ACK_REDELIVERY_TEST_README.md  KURRENTDB_MIGRATION_SUMMARY.md  KURRENTDB_TEST_RESULTS.md  MARIO_AUTH_UPGRADE_ANALYSIS.md  MARIO_REDIS_PHASE1_IMPLEMENTATION.md  MARIO_REPOSITORY_CONSTRUCTOR_FIX.md  MERMAID_SETUP.md  MOTOR_REPOSITORY_UUID_QUERY_FIX.md  MULTI_AGGREGATE_CONSISTENCY_ANALYSIS.md  NOTES_ORGANIZATION_COMPLETE.md  NOTES_ORGANIZATION_PLAN.md  NOTES_UPDATE_OCTOBER_2025.md  PIZZA_ID_TO_LINE_ITEM_ID_REFACTORING.md  README.md  RECREATE_COMMAND_GUIDE.md  REFACTORING_SUMMARY.md  REORGANIZATION_SUMMARY.md  REPOSITORY_CONFIGURATION_ENHANCEMENT_V0_6_21.md  REPOSITORY_EVENT_PUBLISHING_DESIGN.md  ROA_IMPLEMENTATION_STATUS_AND_ROADMAP.md  SCOPED_SERVICE_RESOLUTION_COMPLETE.md  SERVICE_SCOPE_FIX.md  STRING_ANNOTATIONS_EXPLAINED.md  V043_RELEASE_SUMMARY.md  VALUE_OBJECT_SERIALIZATION_FIX.md  VERSION_ATTRIBUTE_UPDATE.md  repository-unification-migration.md  repository-unification-summary.md  test_neuroglia_type_equality.py
patterns/: index.html
samples/: index.html  minimal-cqrs.py  openbank.md.backup  run_complex_demo.py  simple-cqrs-example.py  state-based-persistence-demo.py  ultra-simple-cqrs.py
scripts/: convert_tests_to_async.py  keycloak-reset.sh  pyneuroctl
search/: search_index.json
site/: index.html
test-mermaid/: index.html
tests/: IMPLEMENTATION_STATUS.md  README.md  SUMMARY.md  TEST_ARCHITECTURE.md  conftest.py  data.py  mario_pizzeria_conftest.py  test_documentation_report.py  test_type_stubs.py  test_type_stubs_simple.py
tutorials/: index.html
(+1003 files in other folders)
