[tool.poetry]
name = "neuroglia-python"
version = "0.6.0"
description = "Port from .NET to Python of the Neuroglia Framework"
authors = ["Charles d'Avernas <charles.davernas@neuroglia.io>", "Bruno van de Werve <bvandewe@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [
    { include = "neuroglia", from = "src" },
]
package-mode = true

[tool.poetry.dependencies]
python = "^3.9"
# Core framework dependencies - always required
annotated-types = "^0.7.0"
classy-fastapi = "^0.6.1"
fastapi = "^0.116.0"
multipledispatch = "^1.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.1"
typing-extensions = "^4.9.0"
rx = { version = "^3.2.0" }
uvicorn = { version = "^0.35.0" }
httpx = { version = "^0.28.1" }
grpcio = { version = "^1.74.0" }

# Authentication dependencies
pyjwt = "^2.8.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.6"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.0"

# Optional dependencies - install with extras
pymongo = { version = "^4.6.3", optional = true }
motor = { version = "^3.3.0", optional = true }
esdbclient = { version = "^1.0.0", optional = true }
apscheduler = "^3.11.0"
redis = "^6.4.0"
pydantic = {extras = ["email"], version = "^2.12.3"}
email-validator = "^2.3.0"

# OpenTelemetry dependencies
opentelemetry-api = "^1.28.2"
opentelemetry-sdk = "^1.28.2"
opentelemetry-exporter-otlp-proto-grpc = "^1.28.2"
opentelemetry-exporter-otlp-proto-http = "^1.28.2"
opentelemetry-instrumentation = "^0.49b2"
opentelemetry-instrumentation-fastapi = "^0.49b2"
opentelemetry-instrumentation-httpx = "^0.49b2"
opentelemetry-instrumentation-logging = "^0.49b2"
opentelemetry-instrumentation-system-metrics = "^0.49b2"
opentelemetry-exporter-prometheus = "^0.49b2"
prometheus-client = "^0.21.0"

[tool.poetry.extras]
mongodb = ["pymongo", "motor"]
eventstore = ["esdbclient", "rx"]
redis = ["redis"]
all = ["pymongo", "motor", "esdbclient", "rx", "redis"]

[tool.poetry.group.dev.dependencies]
# Development and testing dependencies
pre-commit = "^4.3.0"
pytest = "^8.0.1"
pytest-asyncio = "^0.26.0"
mypy = "^1.8.0"
autopep8 = "^2.0.4"
coverage = "^7.4.1"
mypy-extensions = "^1.0.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# Documentation dependencies
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.46"
mkdocs-mermaid2-plugin = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 500
